--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@netlify/functions": "^2.6.0",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "serverless-http": "^3.2.0"
+    "express": "^4.18.2"
   }
 }
